; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_ps2mouse.c_ps2mouse_read.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_ps2mouse.c_ps2mouse_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ps2mouse_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ps2mouse_read(%struct.ps2mouse_softc* %0, i32* %1) #0 {
  %3 = alloca %struct.ps2mouse_softc*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.ps2mouse_softc* %0, %struct.ps2mouse_softc** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %7 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %6, i32 0, i32 0
  %8 = call i32 @pthread_mutex_lock(i32* %7)
  %9 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @fifo_get(%struct.ps2mouse_softc* %9, i32* %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %13 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %12, i32 0, i32 0
  %14 = call i32 @pthread_mutex_unlock(i32* %13)
  %15 = load i32, i32* %5, align 4
  ret i32 %15
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @fifo_get(%struct.ps2mouse_softc*, i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
